# reassessing-calibration

./: .gitignore  README.md  pyproject.toml
examples/: imagenet_comparison.py  recal_comparison.py
src/sharpcal/: calibration.py  kernels.py  prediction.py  recal.py  scores.py
